# EpicStaff

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  partly-local-setup.md  podman-setup.md
.claude/: settings.local.json
.claude/agents/: angular-dev.md  architect.md  code-reviewer.md  django-api-dev.md  flow-editor-dev.md  python-ai-dev.md
.github/scripts/: deploy.sh
.github/workflows/: build-and-push.yml  deploy.yaml  (+4 more)
docs/: matrix-chat.md
frontend/: Dockerfile.fe  angular.json  package-lock.json  package.json  tsconfig.json
frontend-config/: frontend-config-dev.json  frontend-config.json
integration_tests/: conftest.py  docker-compose.yaml  integration_test.py  python_code_tool_variables_test.py
make_scripts/: apply_backup.bat  apply_tag_images.bat  backup.bat  setup_prod.sh  stash_tag_images.bat  switch_branch.bat
prod/: prod.env.manifest.yaml
src/: .dockerignore  .env  debug.env  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.override.yaml  docker-compose.yaml
src/matrix_bridge/: Dockerfile  pyproject.toml  run.py
src/matrix_bridge/app/: main.py
src/matrix_bridge/app/controllers/: bridge_routes.py
src/matrix_bridge/app/core/: config.py
src/matrix_bridge/app/models/: matrix_models.py
src/matrix_bridge/app/services/: bot_registry.py  django_api_service.py  matrix_client.py  redis_service.py
src/tool/mcp_tools/open_interpreter_tool/: CLI.Dockerfile  browser.Dockerfile  browser_mcp.py  entrypoint.sh  mcp_server.py  pyproject.toml
(+1558 files in other folders)
